===============
lmirror changes
===============

NEXT (in development)
=====================

Changes
+++++++

* Added lmirror script and setup.py to install lmirror.

* Added lmirror init command which creates a simple mirror set and makes an
  initial journal.

* Added lmirror finish-change command which finishes an open change.

* Fixed command lookup for finish-change so that it can be used.

* Added lmirror start-change command which opens a change, permitting clients
  to not fail fatally when content is mismatched, but instead take a sensible
  action (such as pausing, spinning on the metadata, or rolling back quietly).

* Fixed finish-change not to write a journal if there are no changes to
  propogate.